# aoc-shared

./: Cargo.toml  README.md
cargo-generate/: cargo-generate.toml
cargo-generate/cargo-day-template/: Cargo.toml
cargo-generate/cargo-day-template/src/: main.rs
src/: download_input.rs  input.rs  lib.rs  runner.rs
src/download_input/: main.rs  mod.rs
workspace/aocfin/: Cargo.toml
workspace/aocfin/src/: input.rs  main.rs
