[package]
description = "My helpers and shared libs for Advent of Code"
edition = "2021"
name = "aoc-shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aocdlin"

[lib]
name = "aoc_shared"

[dependencies]
eyre = "0.6.8"
pico-args = "0.5.0"
ureq = "2.5.0"
